--- a/.github/workflows/usage.yml
+++ b/.github/workflows/usage.yml
@@ -25,6 +25,9 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         
+      - name: Get log files
+        run: |
+          Rscript get-logs.R
         
       - name: Push updated logs
         run: |
