--- a/.github/workflows/usage.yml
+++ b/.github/workflows/usage.yml
@@ -45,7 +45,7 @@ jobs:
       
       - name: Render output
         run: |
-          Rscript -e "rmarkdown::render('summary.Rmd')"
+          Rscript -e "rmarkdown::render('index.Rmd')"
 
       - name: Push output
         run: |
