--- a/.github/workflows/usage.yml
+++ b/.github/workflows/usage.yml
@@ -28,6 +28,7 @@ jobs:
         
       - name: Get log files
         run: |
+          dir *.R
           Rscript get-logs.R
         
       - name: Push updated logs
